Fix overflow of animated elements

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ html, body {
     line-height: 1;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 ol, ul {
@@ -150,7 +151,7 @@ table {
 
 #top {
     display: flex;
-    position: absolute;
+    position:absolute;
     width: 100%;
     height: 50vh;
     border: 2px solid var(--side-clr);
